src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C400_C400.py.snap
---
source: src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryGeneratorList: ~
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 29
  fix:
    content: "[x for x in range(3)]"
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 29
  parent: ~
- kind:
    UnnecessaryGeneratorList: ~
  location:
    row: 2
    column: 4
  end_location:
    row: 4
    column: 1
  fix:
    content: "[\n    x for x in range(3)\n]"
    location:
      row: 2
      column: 4
    end_location:
      row: 4
      column: 1
  parent: ~

