src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C401_C401.py.snap
---
source: src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryGeneratorSet: ~
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 28
  fix:
    content: "{x for x in range(3)}"
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 28
  parent: ~
- kind:
    UnnecessaryGeneratorSet: ~
  location:
    row: 2
    column: 4
  end_location:
    row: 4
    column: 1
  fix:
    content: "{\n    x for x in range(3)\n}"
    location:
      row: 2
      column: 4
    end_location:
      row: 4
      column: 1
  parent: ~

