src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C406_C406.py.snap
---
source: src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryLiteralDict: list
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 19
  fix:
    content: "{1: 2}"
    location:
      row: 1
      column: 5
    end_location:
      row: 1
      column: 19
  parent: ~
- kind:
    UnnecessaryLiteralDict: tuple
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 20
  fix:
    content: "{1: 2,}"
    location:
      row: 2
      column: 5
    end_location:
      row: 2
      column: 20
  parent: ~
- kind:
    UnnecessaryLiteralDict: list
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 13
  fix:
    content: "{}"
    location:
      row: 3
      column: 5
    end_location:
      row: 3
      column: 13
  parent: ~
- kind:
    UnnecessaryLiteralDict: tuple
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 13
  fix:
    content: "{}"
    location:
      row: 4
      column: 5
    end_location:
      row: 4
      column: 13
  parent: ~

