src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C409_C409.py.snap
---
source: src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryLiteralWithinTupleCall: list
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 14
  fix:
    content: ()
    location:
      row: 1
      column: 5
    end_location:
      row: 1
      column: 14
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: list
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 18
  fix:
    content: "(1, 2)"
    location:
      row: 2
      column: 5
    end_location:
      row: 2
      column: 18
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: tuple
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 18
  fix:
    content: "(1, 2)"
    location:
      row: 3
      column: 5
    end_location:
      row: 3
      column: 18
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: list
  location:
    row: 4
    column: 5
  end_location:
    row: 7
    column: 2
  fix:
    content: "(\n    1,\n    2\n)"
    location:
      row: 4
      column: 5
    end_location:
      row: 7
      column: 2
  parent: ~
- kind:
    UnnecessaryLiteralWithinTupleCall: tuple
  location:
    row: 8
    column: 5
  end_location:
    row: 10
    column: 1
  fix:
    content: "(1, 2)"
    location:
      row: 8
      column: 5
    end_location:
      row: 10
      column: 1
  parent: ~

