src/rules/flake8_comprehensions/snapshots/ruff__rules__flake8_comprehensions__tests__C416_C416.py.snap
---
source: src/rules/flake8_comprehensions/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryComprehension: list
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 14
  fix:
    content: list(x)
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 14
  parent: ~
- kind:
    UnnecessaryComprehension: set
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 14
  fix:
    content: set(x)
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 14
  parent: ~

